--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <h2>Login</h2>
         <input type="text" placeholder="Username" required>
         <input type="password" placeholder="Password" required>
-        <button>Login</button>
+        <button id="login">Login</button>
     </div>
 </body>
 </html>
+
+<script src="./scripts/login_handler.js"></script>
