--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             color: white;
             border-radius: 5px;
             cursor: pointer;
+            margin-bottom: 10px;
         }
         .login-container button:hover {
             background: #0056b3;
@@ -51,6 +52,7 @@
         <input type="text" placeholder="Username" required>
         <input type="password" placeholder="Password" required>
         <button id="login">Login</button>
+        <button id="create_account_button">Create Account</button>
     </div>
 </body>
 </html>
