--- a/app.html
+++ b/app.html
@@ -1,2 +1,17 @@
 <!DOCTYPE html>
-<h1>APP</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notes</title>
+    <link rel="stylesheet" href="app_style.css">
+</head>
+<body>
+    <div class="sidebar">
+        <h2>My Notes</h2>
+        <ul id="notesList"></ul>
+        <button id="newNoteBtn">+ New Note</button>
+    </div>
+    <div class="editor" contenteditable="true" id="editor"></div>
+</body>
+</html>
