node list added

--- a/app.html
+++ b/app.html
@@ -15,3 +15,5 @@
     <div class="editor" contenteditable="true" id="editor"></div>
 </body>
 </html>
+
+<script src="scripts/app_client.js"></script>
