note titles integrated

--- a/app.html
+++ b/app.html
@@ -12,7 +12,10 @@
         <ul id="notesList"></ul>
         <button id="newNoteBtn">+ New Note</button>
     </div>
-    <div class="editor" contenteditable="true" id="editor"></div>
+    <div class="content">
+        <div class="editor" contenteditable="true" id="title"></div>
+        <div class="editor" contenteditable="true" id="editor"></div>
+    </div>
 </body>
 </html>
 
