--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
+        <p id="message" style="display: none; color: green;"></p>
         <input type="text" placeholder="Username" required>
         <input type="password" placeholder="Password" required>
         <button id="login">Login</button>
